[package]
name = "cea608-types"
description = "Closed Caption 608 types, parser and serializer"
version = "0.1.0"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT"
edition = "2021"
keywords = ["multimedia", "captions"]
categories = ["multimedia::encoding"]
documentation = "https://docs.rs/cea608-types"
repository = "https://github.com/ystreet/cea608-types"
rust-version = "1.65.0"

[dependencies]
log = "0.4"
thiserror = "1"
once_cell = "1"
env_logger = "0.10"
