[package]
name = "cea608-types"
description = "Closed Caption 608 types, parser and serializer"
version = "0.1.3"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT"
edition = "2021"
keywords = ["multimedia", "captions"]
categories = ["multimedia::encoding"]
documentation = "https://docs.rs/cea608-types"
repository = "https://github.com/ystreet/cea608-types"
rust-version = "1.71.1"

[dependencies]
log = "0.4"
thiserror = "2"
once_cell = "1"

[dev-dependencies]
env_logger = "0.11"
